--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         voluptate reiciendis? Nihil debitis architecto incidunt aliquid
         veritatis officiis possimus pariatur nesciunt vel commodi nulla odit
         expedita, voluptatum autem explicabo eaque similique animi hic
-        voluptates aspernatur provident harum? Esse fugit cumque architecto.
+        voluptates aspernatur provident harum? Esse fugit cumque architecto. <br>
         <img src="./adventure.jpg" alt="ilustracija" />
       </article>
       <h3 id="kontakt">Kontakt</h3>
