--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         pariatur saepe sit quasi labore impedit perspiciatis, repellendus quas
         accusamus provident laboriosam eligendi voluptas. Recusandae!
       </p>
+      <section>
       <form action="" method="post" id="kontakt">
         <label for="ime">Ime i prezime:</label> <br />
         <input type="text" id="ime" required /> <br />
@@ -68,6 +69,7 @@
         <br />
         <button>Pošalji poruku</button>
       </form>
+    </section>
     </main>
     <hr />
     <footer>
