prva verzija domaceg

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turistička agencija "Avanturist"</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <header>
@@ -20,7 +21,7 @@
     <hr />
     <main>
       <h2>Turistička agencija "Avanturist"</h2>
-      <h3>O nama</h3>
+      <h3 id="mojnaslov" class="informacije o turistickoj agenciji">O nama</h3>
       <article id="onama">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis qui
         ut nihil ipsam sed, delectus autem numquam! Inventore aliquid quia,
@@ -31,7 +32,7 @@
         at. <br />
         <img src="./team.jpg" alt="timski rad" />
       </article>
-      <h3>Naše djelatnosti</h3>
+      <h3 class="djelatnosti">Naše djelatnosti</h3>
       <article id="našedjelatnosti">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
         eveniet porro. Corporis, error voluptatum! Nesciunt placeat unde
@@ -42,7 +43,7 @@
         voluptates aspernatur provident harum? Esse fugit cumque architecto. <br>
         <img src="./adventure.jpg" alt="ilustracija" />
       </article>
-      <h3 id="kontakt">Kontakt</h3>
+      <h3 id="kontakt" class="kontakti">Kontakt</h3>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate
         obcaecati corrupti doloribus velit repellat at quo dolorem expedita
