--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Turistička agencija "Avanturist"</h1>
+      <h1 class="maintitle">Turistička agencija "Avanturist"</h1>
       <nav>
         <ul>
           <li><a href="#onama">O nama</a></li>
@@ -30,7 +30,7 @@
         in quo odio, consectetur aliquid vitae odit, sed amet veritatis,
         deserunt ipsa hic assumenda minima officiis voluptatem architecto veniam
         at. <br />
-        <img src="./team.jpg" alt="timski rad" />
+        <img src="./team.jpg" alt="timski rad" class="mojaslika" />
       </article>
       <h3 class="djelatnosti">Naše djelatnosti</h3>
       <article id="našedjelatnosti">
@@ -41,7 +41,7 @@
         veritatis officiis possimus pariatur nesciunt vel commodi nulla odit
         expedita, voluptatum autem explicabo eaque similique animi hic
         voluptates aspernatur provident harum? Esse fugit cumque architecto. <br>
-        <img src="./adventure.jpg" alt="ilustracija" />
+        <img src="./adventure.jpg" alt="ilustracija" class="najboljaslika"/>
       </article>
       <h3 id="kontakt" class="kontakti">Kontakt</h3>
       <p>
@@ -73,14 +73,14 @@
     </section>
     </main>
     <hr />
-    <footer>
+    <footer class="footer">
       <p>Avanturist &#169; 2022</p>
       <a href="mailto:katarina.gaspic@gmail.com">
         <img
           src="https://findicons.com/files/icons/772/token_light/128/e_mail.png"
           alt="email ikona"
           height="90px"
-          width="100px"
+          width="70px"
         />
       </a>
     </footer>
