--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
           <li><a href="#kontakt">Kontakt</a></li>
         </ul>
       </nav>
+
+      <div class="dropdown">
+        <button class="button">Izbornik</button>
+        <div class="onostocesespustati">
+          <a href="#onama">O nama</a>
+          <a href="#našedjelatnosti">Naše djelatnosti</a> 
+          <a href="#kontakt">Kontakt</a>
+        </div>
+      </div>
     </header>
     <hr />
     <main>
