--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="#kontakt">Kontakt</a></li>
         </ul>
       </nav>
-
+<p>Pređi mišem preko gumba da bi se prikazao izbornik</p>
       <div class="dropdown">
         <button class="button">Izbornik</button>
         <div class="onostocesespustati">
